@@ -10,7 +10,6 @@ import static io.quarkus.deployment.pkg.PackageConfig.JarConfig.JarType.*;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -341,7 +340,7 @@ public class JibProcessor {
             configPath = outputTarget.getOutputDirectory().resolve(configPath);
         }
         try {
-            Files.write(configPath, output.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(configPath, output);
         } catch (IOException e) {
             log.errorf(e, "Unable to write file '%s'.", configPath.toAbsolutePath().toString());
         }
@@ -806,6 +805,7 @@ public class JibProcessor {
                     .setEnvironment(createEnvironmentVariables(jibConfig))
                     .setLabels(allLabels(jibConfig, containerImageConfig, containerImageLabels));
 
+            includeSharedObjects(jibContainerBuilder, nativeImageBuildItem, workDirInContainer);
             mayInheritEntrypoint(jibContainerBuilder, entrypoint, jibConfig.nativeArguments().orElse(null));
 
             if (jibConfig.useCurrentTimestamp()) {
@@ -818,6 +818,26 @@ public class JibProcessor {
             return jibContainerBuilder;
         } catch (InvalidImageReferenceException e) {
             throw new RuntimeException(e);
+        }
+    }
+
+    private void includeSharedObjects(JibContainerBuilder jibContainerBuilder, NativeImageBuildItem nativeImageBuildItem,
+            AbsoluteUnixPath workDirInContainer) {
+        Path buildDir = nativeImageBuildItem.getPath().getParent();
+        try (Stream<Path> paths = Files.list(buildDir)) {
+            List<Path> sharedObjectFiles = paths.filter(Files::isRegularFile).filter(p -> !Files.isDirectory(p))
+                    .filter(p -> p.getFileName().toString().endsWith(".so")).toList();
+            if (!sharedObjectFiles.isEmpty()) {
+                FileEntriesLayer.Builder fileEntriesLayerBuilder = FileEntriesLayer.builder();
+                sharedObjectFiles.forEach(sharedObjectFile -> {
+                    fileEntriesLayerBuilder.addEntry(sharedObjectFile,
+                            workDirInContainer.resolve(sharedObjectFile.getFileName().toString()),
+                            FilePermissions.fromOctalString("775"));
+                });
+                jibContainerBuilder.addFileEntriesLayer(fileEntriesLayerBuilder.setName("shared objects").build());
+            }
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
     }
 
