@@ -6,6 +6,7 @@ import java.io.InputStream;
 import java.io.UncheckedIOException;
 import java.lang.reflect.Modifier;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -19,6 +20,8 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.jboss.jandex.ClassInfo;
@@ -33,6 +36,8 @@ import org.yaml.snakeyaml.Yaml;
 import io.quarkus.arc.deployment.AdditionalBeanBuildItem;
 import io.quarkus.arc.deployment.BeanContainerBuildItem;
 import io.quarkus.arc.processor.BuiltinScope;
+import io.quarkus.deployment.Capabilities;
+import io.quarkus.deployment.Capability;
 import io.quarkus.deployment.IsLocalDevelopment;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
@@ -61,6 +66,7 @@ import io.quarkus.devui.spi.buildtime.FooterLogBuildItem;
 import io.quarkus.devui.spi.buildtime.StaticContentBuildItem;
 import io.quarkus.devui.spi.page.CardPageBuildItem;
 import io.quarkus.devui.spi.page.FooterPageBuildItem;
+import io.quarkus.devui.spi.page.LibraryLink;
 import io.quarkus.devui.spi.page.MenuPageBuildItem;
 import io.quarkus.devui.spi.page.Page;
 import io.quarkus.devui.spi.page.PageBuilder;
@@ -68,6 +74,7 @@ import io.quarkus.devui.spi.page.QuteDataPageBuilder;
 import io.quarkus.devui.spi.page.WebComponentPageBuilder;
 import io.quarkus.maven.dependency.GACT;
 import io.quarkus.maven.dependency.GACTV;
+import io.quarkus.maven.dependency.ResolvedDependency;
 import io.quarkus.qute.Qute;
 import io.quarkus.runtime.util.ClassPathUtils;
 import io.quarkus.vertx.http.deployment.FilterBuildItem;
@@ -121,8 +128,12 @@ public class DevUIProcessor {
     private static final String CAPABILITIES = "capabilities";
     private static final String PROVIDES = "provides";
     private static final String UNLISTED = "unlisted";
+    private static final String HIDE = "hide-in-dev-ui";
     private static final String CODESTART = "codestart";
     private static final String LANGUAGES = "languages";
+    private static final String ICON_URL = "icon-url";
+    private static final String LIB_GA = "lib-ga";
+    private final Pattern libGAPattern = Pattern.compile("([^:\\[\\]]+):([^\\[\\]]+)(\\[(.+?)\\])?");
 
     private static final Logger log = Logger.getLogger(DevUIProcessor.class);
 
@@ -201,7 +212,7 @@ public class DevUIProcessor {
                 String parsedContent = Qute.fmt(new String(c.getTemplate()), c.getData());
                 Path tempFile = devUiBasePath
                         .resolve(c.getFileName());
-                Files.write(tempFile, parsedContent.getBytes(StandardCharsets.UTF_8));
+                Files.writeString(tempFile, parsedContent);
 
                 urlAndPath.put(c.getFileName(), tempFile.toString());
             }
@@ -485,7 +496,8 @@ public class DevUIProcessor {
             CurateOutcomeBuildItem curateOutcomeBuildItem,
             BuildProducer<ExtensionsBuildItem> extensionsProducer,
             BuildProducer<WebJarBuildItem> webJarBuildProducer,
-            BuildProducer<DevUIWebJarBuildItem> devUIWebJarProducer) {
+            BuildProducer<DevUIWebJarBuildItem> devUIWebJarProducer,
+            Capabilities capabilities) {
 
         if (launchModeBuildItem.isNotLocalDevModeType()) {
             // produce extension build item as cascade of build steps rely on it
@@ -501,6 +513,8 @@ public class DevUIProcessor {
 
         devUIWebJarProducer.produce(new DevUIWebJarBuildItem(UI_JAR, DEVUI));
 
+        final boolean assistantIsAvailable = capabilities.isPresent(Capability.ASSISTANT);
+
         // Now go through all extensions and check them for active components
         Map<String, CardPageBuildItem> cardPagesMap = getCardPagesMap(curateOutcomeBuildItem, cardPageBuildItems);
         Map<String, MenuPageBuildItem> menuPagesMap = getMenuPagesMap(curateOutcomeBuildItem, menuPageBuildItems);
@@ -511,7 +525,7 @@ public class DevUIProcessor {
             List<Extension> inactiveExtensions = new ArrayList<>();
             List<Extension> sectionMenuExtensions = new ArrayList<>();
             List<Extension> footerTabExtensions = new ArrayList<>();
-            ClassPathUtils.consumeAsPaths(YAML_FILE, (Path p) -> {
+            ClassPathUtils.consumeAsPaths(YAML_FILE, (var p) -> {
                 try {
                     Extension extension = new Extension();
                     final String extensionYaml;
@@ -527,114 +541,139 @@ public class DevUIProcessor {
                     final Map<String, Object> extensionMap = yaml.load(extensionYaml);
 
                     if (extensionMap.containsKey(NAME)) {
-                        String namespace = getExtensionNamespace(extensionMap);
-                        extension.setNamespace(namespace);
-                        extension.setName((String) extensionMap.get(NAME));
-                        extension.setDescription((String) extensionMap.getOrDefault(DESCRIPTION, null));
-                        String artifactId = (String) extensionMap.getOrDefault(ARTIFACT, null);
-                        extension.setArtifact(artifactId);
 
                         Map<String, Object> metaData = (Map<String, Object>) extensionMap.getOrDefault(METADATA, null);
-                        extension.setKeywords((List<String>) metaData.getOrDefault(KEYWORDS, null));
-                        extension.setShortName((String) metaData.getOrDefault(SHORT_NAME, null));
+                        if (metaData != null) {
+                            boolean isHidden = Boolean.valueOf(String.valueOf(metaData.getOrDefault(HIDE, false)));
+                            if (!isHidden) {
 
-                        if (metaData.containsKey(GUIDE)) {
-                            String guide = (String) metaData.get(GUIDE);
-                            try {
-                                extension.setGuide(new URL(guide));
-                            } catch (MalformedURLException mue) {
-                                log.warn("Could not set Guide URL [" + guide + "] for exception [" + namespace + "]");
-                            }
-                        }
+                                String namespace = getExtensionNamespace(extensionMap);
+                                extension.setNamespace(namespace);
+                                extension.setName((String) extensionMap.get(NAME));
+                                extension.setDescription((String) extensionMap.getOrDefault(DESCRIPTION, null));
+                                String artifactId = (String) extensionMap.getOrDefault(ARTIFACT, null);
+                                extension.setArtifact(artifactId);
 
-                        extension.setCategories((List<String>) metaData.getOrDefault(CATEGORIES, null));
-                        extension.setStatus(collectionToString(metaData, STATUS));
-                        extension.setBuiltWith((String) metaData.getOrDefault(BUILT_WITH, null));
-                        extension.setConfigFilter((List<String>) metaData.getOrDefault(CONFIG, null));
-                        extension.setExtensionDependencies((List<String>) metaData.getOrDefault(EXTENSION_DEPENDENCIES, null));
-                        extension.setUnlisted(String.valueOf(metaData.getOrDefault(UNLISTED, false)));
+                                extension.setKeywords((List<String>) metaData.getOrDefault(KEYWORDS, null));
+                                extension.setShortName((String) metaData.getOrDefault(SHORT_NAME, null));
 
-                        if (metaData.containsKey(CAPABILITIES)) {
-                            Map<String, Object> capabilities = (Map<String, Object>) metaData.get(CAPABILITIES);
-                            extension.setProvidesCapabilities((List<String>) capabilities.getOrDefault(PROVIDES, null));
-                        }
-
-                        if (metaData.containsKey(CODESTART)) {
-                            Map<String, Object> codestartMap = (Map<String, Object>) metaData.get(CODESTART);
-                            if (codestartMap != null) {
-                                Codestart codestart = new Codestart();
-                                codestart.setName((String) codestartMap.getOrDefault(NAME, null));
-                                codestart.setLanguages(listOrString(codestartMap, LANGUAGES));
-                                codestart.setArtifact((String) codestartMap.getOrDefault(ARTIFACT, null));
-                                extension.setCodestart(codestart);
-                            }
-                        }
-
-                        if (!cardPagesMap.containsKey(namespace)) { // Inactive
-                            inactiveExtensions.add(extension);
-                        } else { // Active
-                            CardPageBuildItem cardPageBuildItem = cardPagesMap.get(namespace);
-
-                            // Add all card links
-                            List<PageBuilder> cardPageBuilders = cardPageBuildItem.getPages();
-
-                            Map<String, Object> buildTimeData = cardPageBuildItem.getBuildTimeData();
-                            for (PageBuilder pageBuilder : cardPageBuilders) {
-                                Page page = buildFinalPage(pageBuilder, extension, buildTimeData);
-                                extension.addCardPage(page);
-                            }
-
-                            // See if there is a custom card component
-                            cardPageBuildItem.getOptionalCard().ifPresent((card) -> {
-                                card.setNamespace(extension.getNamespace());
-                                extension.setCard(card);
-                            });
-
-                            // Also make sure the static resources for that static resource is available
-                            produceResources(artifactId, webJarBuildProducer,
-                                    devUIWebJarProducer);
-                            activeExtensions.add(extension);
-                        }
-
-                        // Menus on the sections menu
-                        if (menuPagesMap.containsKey(namespace)) {
-                            MenuPageBuildItem menuPageBuildItem = menuPagesMap.get(namespace);
-                            List<PageBuilder> menuPageBuilders = menuPageBuildItem.getPages();
-
-                            Map<String, Object> buildTimeData = menuPageBuildItem.getBuildTimeData();
-                            for (PageBuilder pageBuilder : menuPageBuilders) {
-                                Page page = buildFinalPage(pageBuilder, extension, buildTimeData);
-                                extension.addMenuPage(page);
-                            }
-                            // Also make sure the static resources for that static resource is available
-                            produceResources(artifactId, webJarBuildProducer,
-                                    devUIWebJarProducer);
-                            sectionMenuExtensions.add(extension);
-                        }
-
-                        // Tabs in the footer
-                        if (footerPagesMap.containsKey(namespace)) {
-
-                            List<FooterPageBuildItem> fbis = footerPagesMap.get(namespace);
-                            for (FooterPageBuildItem footerPageBuildItem : fbis) {
-                                List<PageBuilder> footerPageBuilders = footerPageBuildItem.getPages();
-
-                                Map<String, Object> buildTimeData = footerPageBuildItem.getBuildTimeData();
-                                for (PageBuilder pageBuilder : footerPageBuilders) {
-                                    Page page = buildFinalPage(pageBuilder, extension, buildTimeData);
-                                    extension.addFooterPage(page);
+                                if (metaData.containsKey(GUIDE)) {
+                                    String guide = (String) metaData.get(GUIDE);
+                                    try {
+                                        extension.setGuide(new URL(guide));
+                                    } catch (MalformedURLException mue) {
+                                        log.warn("Could not set Guide URL [" + guide + "] for exception [" + namespace + "]");
+                                    }
                                 }
-                                // Also make sure the static resources for that static resource is available
-                                produceResources(artifactId, webJarBuildProducer,
-                                        devUIWebJarProducer);
-                                footerTabExtensions.add(extension);
+
+                                extension.setCategories((List<String>) metaData.getOrDefault(CATEGORIES, null));
+                                extension.setStatus(collectionToString(metaData, STATUS));
+                                extension.setBuiltWith((String) metaData.getOrDefault(BUILT_WITH, null));
+                                extension.setConfigFilter((List<String>) metaData.getOrDefault(CONFIG, null));
+                                extension.setExtensionDependencies(
+                                        (List<String>) metaData.getOrDefault(EXTENSION_DEPENDENCIES, null));
+                                extension.setUnlisted(String.valueOf(metaData.getOrDefault(UNLISTED, false)));
+
+                                if (metaData.containsKey(CAPABILITIES)) {
+                                    Map<String, Object> cap = (Map<String, Object>) metaData.get(CAPABILITIES);
+                                    extension.setProvidesCapabilities((List<String>) cap.getOrDefault(PROVIDES, null));
+                                }
+
+                                if (metaData.containsKey(CODESTART)) {
+                                    Map<String, Object> codestartMap = (Map<String, Object>) metaData.get(CODESTART);
+                                    if (codestartMap != null) {
+                                        Codestart codestart = new Codestart();
+                                        codestart.setName((String) codestartMap.getOrDefault(NAME, null));
+                                        codestart.setLanguages(listOrString(codestartMap, LANGUAGES));
+                                        codestart.setArtifact((String) codestartMap.getOrDefault(ARTIFACT, null));
+                                        extension.setCodestart(codestart);
+                                    }
+                                }
+
+                                if (cardPagesMap.containsKey(namespace) && cardPagesMap.get(namespace).hasPages()) { // Active
+                                    CardPageBuildItem cardPageBuildItem = cardPagesMap.get(namespace);
+
+                                    // Add all card links
+                                    List<PageBuilder> cardPageBuilders = cardPageBuildItem.getPages();
+
+                                    Map<String, Object> buildTimeData = cardPageBuildItem.getBuildTimeData();
+                                    for (PageBuilder pageBuilder : cardPageBuilders) {
+                                        Page page = buildFinalPage(pageBuilder, extension, buildTimeData);
+                                        if (!page.isAssistantPage() || assistantIsAvailable) {
+                                            extension.addCardPage(page);
+                                        }
+                                    }
+
+                                    // See if there is a custom card component
+                                    cardPageBuildItem.getOptionalCard().ifPresent((card) -> {
+                                        card.setNamespace(extension.getNamespace());
+                                        extension.setCard(card);
+                                    });
+
+                                    addLogo(extension, cardPageBuildItem, metaData);
+                                    addLibraryLinks(extension, cardPageBuildItem, curateOutcomeBuildItem, metaData);
+
+                                    // Also make sure the static resources for that static resource is available
+                                    produceResources(artifactId, webJarBuildProducer,
+                                            devUIWebJarProducer);
+                                    activeExtensions.add(extension);
+                                } else { // Inactive
+                                    if (addLogo(extension, cardPagesMap.get(namespace), metaData)) {
+                                        // Also make sure the static resources for that static resource is available
+                                        produceResources(artifactId, webJarBuildProducer,
+                                                devUIWebJarProducer);
+                                    }
+
+                                    addLibraryLinks(extension, cardPagesMap.get(namespace), curateOutcomeBuildItem,
+                                            metaData);
+
+                                    inactiveExtensions.add(extension);
+                                }
+
+                                // Menus on the sections menu
+                                if (menuPagesMap.containsKey(namespace)) {
+                                    MenuPageBuildItem menuPageBuildItem = menuPagesMap.get(namespace);
+                                    List<PageBuilder> menuPageBuilders = menuPageBuildItem.getPages();
+
+                                    Map<String, Object> buildTimeData = menuPageBuildItem.getBuildTimeData();
+                                    for (PageBuilder pageBuilder : menuPageBuilders) {
+                                        Page page = buildFinalPage(pageBuilder, extension, buildTimeData);
+                                        if (!page.isAssistantPage() || assistantIsAvailable) {
+                                            extension.addMenuPage(page);
+                                        }
+                                    }
+                                    // Also make sure the static resources for that static resource is available
+                                    produceResources(artifactId, webJarBuildProducer,
+                                            devUIWebJarProducer);
+                                    sectionMenuExtensions.add(extension);
+                                }
+
+                                // Tabs in the footer
+                                if (footerPagesMap.containsKey(namespace)) {
+
+                                    List<FooterPageBuildItem> fbis = footerPagesMap.get(namespace);
+                                    for (FooterPageBuildItem footerPageBuildItem : fbis) {
+                                        List<PageBuilder> footerPageBuilders = footerPageBuildItem.getPages();
+
+                                        Map<String, Object> buildTimeData = footerPageBuildItem.getBuildTimeData();
+                                        for (PageBuilder pageBuilder : footerPageBuilders) {
+                                            Page page = buildFinalPage(pageBuilder, extension, buildTimeData);
+                                            if (!page.isAssistantPage() || assistantIsAvailable) {
+                                                extension.addFooterPage(page);
+                                            }
+                                        }
+                                        // Also make sure the static resources for that static resource is available
+                                        produceResources(artifactId, webJarBuildProducer,
+                                                devUIWebJarProducer);
+                                        footerTabExtensions.add(extension);
+                                    }
+                                }
                             }
                         }
 
+                        Collections.sort(activeExtensions, sortingComparator);
+                        Collections.sort(inactiveExtensions, sortingComparator);
                     }
-
-                    Collections.sort(activeExtensions, sortingComparator);
-                    Collections.sort(inactiveExtensions, sortingComparator);
                 } catch (IOException | RuntimeException e) {
                     // don't abort, just log, to prevent a single extension from breaking entire dev ui
                     log.error("Failed to process extension descriptor " + p.toUri(), e);
@@ -672,6 +711,71 @@ public class DevUIProcessor {
         } catch (IOException ex) {
             throw new RuntimeException(ex);
         }
+    }
+
+    private void addLibraryLinks(Extension extension, CardPageBuildItem cardPageBuildItem,
+            CurateOutcomeBuildItem curateOutcomeBuildItem, Map<String, Object> metaData) {
+        if (cardPageBuildItem != null && !cardPageBuildItem.hasLibraryVersions() && !metaData.containsKey(LIB_GA)) {
+            return;
+        }
+
+        // Build a lookup map once
+        Map<String, String> versionMap = curateOutcomeBuildItem.getApplicationModel().getDependencies().stream()
+                .collect(Collectors.toMap(
+                        rd -> rd.getGroupId() + ":" + rd.getArtifactId(),
+                        ResolvedDependency::getVersion,
+                        (existing, replacement) -> existing // keep the first one
+                ));
+
+        if (cardPageBuildItem != null) {
+            for (LibraryLink lib : cardPageBuildItem.getLibraryVersions()) {
+                String key = lib.getGroupId() + ":" + lib.getArtifactId();
+                String version = versionMap.get(key);
+                if (version != null) {
+                    lib.setVersion(version);
+                    extension.addLibraryLink(lib);
+                }
+            }
+        }
+
+        if (metaData.containsKey(LIB_GA) && !extension.hasLibraryLinks()) {
+            String libGA = (String) metaData.get(LIB_GA);
+            Matcher matcher = libGAPattern.matcher(libGA);
+
+            if (matcher.matches()) {
+
+                String groupId = matcher.group(1);
+                String artifactId = matcher.group(2);
+                URL url = null;
+                if (matcher.group(4) != null) {
+                    try {
+                        url = URI.create(matcher.group(4)).toURL();
+                    } catch (MalformedURLException ex) {
+                        ex.printStackTrace();
+                    }
+                }
+
+                String version = versionMap.get(groupId + ":" + artifactId);
+                if (version != null) {
+                    LibraryLink l = new LibraryLink(groupId, artifactId, artifactId, url);
+                    l.setVersion(version);
+                    extension.addLibraryLink(l);
+                }
+            }
+        }
+
+    }
+
+    private boolean addLogo(Extension extension, CardPageBuildItem cardPageBuildItem, Map<String, Object> metaData) {
+        if (cardPageBuildItem != null && cardPageBuildItem.hasLogo()) {
+            extension.setLogo(cardPageBuildItem.getDarkLogo(), cardPageBuildItem.getLightLogo());
+            return true;
+        } else if (metaData.containsKey(ICON_URL)) {
+            String iconUrl = (String) metaData.get(ICON_URL);
+            extension.setLogo(iconUrl, iconUrl);
+            return true;
+        }
+        return false;
     }
 
     private String collectionToString(Map<String, Object> metaData, String key) {
